--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-;[env:nanoatmega328]
-;platform = atmelavr
-;board = nanoatmega328
-;framework = arduino
+; [env:esp32doit-devkit-v1]
+; platform = espressif32
+; board = esp32doit-devkit-v1
+; framework = arduino
 
-[env:esp32doit-devkit-v1]
-platform = espressif32
-board = esp32doit-devkit-v1
+[env:d1_mini]
+platform = espressif8266
+board = d1_mini
 framework = arduino
 
 monitor_speed = 115200 
