--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+/images/VID_20191109_154317.mp4
+/images/VID_20191109_154445.mp4
+/images/VID_20191109_155946.mp4
+/images/VID_20191109_162044.mp4
+/images/VID_20191122_224708.mp4
